--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "deload",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Dynamically load scripts & stylesheets when required.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "repository": "git@github.com:neilveil/deload.git",
   "scripts": {
     "build": "rimraf dist && tsc"
